<?xml version="1.0"?>
<package format="2">
  <name>tb3_autonomous_op</name>
  <version>0.0.0</version>
  <description>The tb3_autonomous_op package (meta package)</description>
  <maintainer email="scotthadzik@weber.edu">Scoptt Hadzik</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>tb3_camera</exec_depend>
  <exec_depend>tb3_core</exec_depend>
  <exec_depend>tb3_detect</exec_depend>
  <exec_depend>tb3_driving</exec_depend>
  <exec_depend>tb3_msgs</exec_depend>
  <export><metapackage/></export>
</package>
